# md2ppt

./: .env.example  .gitignore  README.md  SPEC.md  example.html  main.py  pyproject.toml  web_app.py
.claude/: settings.local.json
.claude/skills/: commit.md
example/: example.html  example.md
md2ppt/: generator.py  mermaid_renderer.py  parser.py
qa_artifacts/: run_cli_html_tests.py
qa_artifacts/fixtures/: adjacent-h1.md  bom.md  code-h1.md  full-spectrum.md  my file (1).md  my-presentation.md  no-h1.md  simple.md  unclosed-fence.md  visual-preview.md  中文演示.md
templates/: index.html  login.html
