[project]
name = "md2ppt"
version = "0.1.0"
description = "Convert Markdown files to PPT-style static HTML presentations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistune>=3.0",
    "flask>=3.0",
    "pygments>=2.18",
    "playwright>=1.58.0",
]

[project.scripts]
md2ppt = "main:main"
md2ppt-web = "web_app:main"
