[project]
name = "md2ppt"
version = "1.1.9"
description = "Convert Markdown files to PPT-style static HTML presentations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistune>=3.0",
    "flask>=3.0",
    "pygments>=2.18",
    "playwright>=1.58.0",
    "gunicorn>=25.2.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["md2ppt*"]

[tool.setuptools]
py-modules = ["main"]

[project.scripts]
md2ppt = "main:main"
